# proxy-sdk

./: Cargo.toml  README.md  build.rs
examples/: mini_proxy.rs
proto/: attributes.proto  grpc_service.proto
run_examples/: .gitignore  Dockerfile.proxy_native  Dockerfile.proxy_wasm  Dockerfile.web_service  docker-compose-native.yaml  docker-compose-wasm.yaml  run_example_native.sh  run_example_wasm.sh
run_examples/app/: test2.html
run_examples/config/: envoy_native.yaml  envoy_wasm.yaml  mini_proxy.wasm
src/: context.rs  dispatcher.rs  downcast_box.rs  env.rs  envoy.rs  grpc_call.rs  grpc_stream.rs  hostcalls.rs  http.rs  http_call.rs  lib.rs  logger.rs  metrics.rs  native.rs  queue.rs  rng.rs  shared_data.rs  status.rs  stream.rs  time.rs  upstream.rs
src/property/: all.rs  envoy.rs  mod.rs
